feat(permanent): add info on phases of mkDerivation

--- a/02-permanent-notes/20251016165533.md
+++ b/02-permanent-notes/20251016165533.md
@@ -4,7 +4,7 @@ id: 20251016165553
 tags: []
 ---
 # Nix derivations
-Derivations are at the core of the nix language. A nix derivation is a set of codified build instructions for producing a set of files. Usually these files are some kind of binary software of program that can be run. The builtin function `derivation` can be used to create a derivation. It requires an attribute set with the fields `name`, `system` and `builder`. When the derivation function is evaluated, it runs the `builder` executable. The derivation is considered successful if the builder runs without issue and creates the folder `$out`. There are other attributes that can optionally be provided to further costumize the derivation. Usually, derivations are created using various wrapper functions.
+Derivations are at the core of the nix language. A nix derivation is a set of codified build instructions for producing a set of files. Usually these files are some kind of binary software of program that can be run. The builtin function `derivation` can be used to create a derivation. It requires an attribute set with the fields `name`, `system` and `builder`. When the derivation function is evaluated, it runs the `builder` executable. The derivation is considered successful if the builder runs without issue and creates the folder `$out`. There are other attributes that can optionally be provided to further costumize the derivation. Theres also the possibility of hooking into various phases, executed at different points in the derivations evaluation. Usually, derivations are created using various wrapper functions.
 
 ## Example
 ```nix
