feat(permanent): nix flake show example

--- a/02-permanent-notes/20251016181621.md
+++ b/02-permanent-notes/20251016181621.md
@@ -34,6 +34,7 @@ In the above example, nixpkgs is the only input. It contains an attribute legacy
 The reason we use flakes is to lock the exact version of inputs. It's the same reason that we might want to specify an exact commit of the source of some software we want to build with nix; to ensure reproducibility. When we run something in the flake, a `flake.lock` file is generated. Much like a `cargo.lock` or `package-lock.json` it pinpoints the exact versions of inputs. Not only down to the commit ID, but by hashing the contents of the inputs. So in effect, we achieve mostly the same effect as we could by using fetchUrl with some exact commit ID(no flake) and a sha256 checksum. However, flakes is a cleaner way to manage this. We can have a list of inputs in a standardized format, and have the ability to automatically update some or all of those inputs at will.
 
 Another perk of flakes is the standardized outputs, which other flakes may interface with. We can import some flake, and we will find packages under `packages`, and so on. We can use `nix flake show` to display a tree of the available derivations of a flake, including what systems they're available for:
+![nix-flake-show-output](../00-resources/nix-flake-show-output.png)
 
 ## Fields of a flake
 Flakes have specific allowed fields that are used for different things, often accessed by different `nix` commands.
