feat(permanent): flake outputs

--- a/02-permanent-notes/20251016181621.md
+++ b/02-permanent-notes/20251016181621.md
@@ -47,8 +47,8 @@ A flake can take other flakes as input. Technically inputs can be something othe
 
 ### Outputs
 The following is an exhaustive list of all outputs a flake may specify:
-- [packages]([[]]) \[TBA\]
-- [devShells]([[]]) \[TBA\]
+- [packages]([[20251016201952]])
+- [devShells]([[20251016203151]])
 - [nixosModules]([[]]) \[TBA\]
 - [nixosConfigurations]([[]]) \[TBA\]
 - [apps]([[]]) \[TBA\]
